--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
         </div>
 
     </form>
+    <div class="submit"> 
+    <input type="button" id="clear" value="clear" class="boton">
+    </div>
     <br>
     <div class="msg" id="msg"></div>
 </div>
 
+<a href="todo.html">ir a To Do jquery</a>
 
 
 </body>
